--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "This library is the implementation of [web-ifc](https://github.com/tomvandig/web-ifc) for [THREE.js](https://github.com/mrdoob/three.js/). This allows to parse and generate the geometry of IFC models in JavaScript, both in the browser and on a Node server.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build-cjs && npm run build-jsm-example",
-    "build-cjs": "rollup --config src/js/rollup.config.js",
-    "build-jsm-example": "rollup --config examples/jsm/rollup.config.js"
+    "build": "npm run build-iife-example && npm run build-jsm-example && npm run copy-wasm",
+    "build-iife-example": "rollup --config src/js/rollup.config.js && cpy src/js/build/IfcLoader.js examples/js/lib",
+    "build-jsm-example": "rollup --config examples/jsm/rollup.config.js",
+    "copy-wasm": "npm run copy-wasm-js && npm run copy-wasm-jsm",
+    "copy-wasm-js": "cpy node_modules/web-ifc/web-ifc.wasm examples/js/lib",
+    "copy-wasm-jsm": "cpy node_modules/web-ifc/web-ifc.wasm examples/jsm"
   },
   "repository": {
     "type": "git",
@@ -22,7 +24,7 @@
   "homepage": "https://github.com/tomvandig/web-ifc-three#readme",
   "dependencies": {
     "three": "^0.126.0",
-    "web-ifc": "0.0.13"
+    "web-ifc": "0.0.15"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
@@ -30,6 +32,8 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
+    "cpy": "^8.1.2",
+    "cpy-cli": "^3.1.1",
     "esbuild": "^0.8.55",
     "rollup": "^2.40.0",
     "rollup-plugin-dts": "^2.0.1",
