--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "This library is the implementation of [web-ifc](https://github.com/tomvandig/web-ifc) for [THREE.js](https://github.com/mrdoob/three.js/). This allows to parse and generate the geometry of IFC models in JavaScript, both in the browser and on a Node server.",
   "main": "index.js",
   "scripts": {
-    "watch": "npm run copy-wasm && rollup --config example/rollup.config.js -w",
-    "build": "npm run build-example && npm run copy-wasm",
-    "build-example": "rollup --config example/rollup.config.js",
+    "setup-repo": "npm i -g rollup && npm i -g cpy-cli",
+    "build-all": "npm run build && npm run build-example",
+    "build": "rollup -c config/rollup.config.js && npm run build-declaration && npm run clean",
+    "build-declaration": "tsc -p config/tsconfig.declaration.json",
+    "clean": " npm run format-result",
+    "format-result": "esformatter --config config/esformatter.config.json dist/IFCLoader.js -i",
+    "build-example": "rollup -c example/rollup.config.js && npm run copy-wasm",
     "copy-wasm": "cpy node_modules/web-ifc/web-ifc.wasm example"
   },
   "repository": {
@@ -23,7 +27,7 @@
   "dependencies": {
     "stats.js": "^0.17.0",
     "three": "^0.126.0",
-    "web-ifc": "0.0.18"
+    "web-ifc": "0.0.19"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
@@ -31,13 +35,14 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
-    "cpy": "^8.1.2",
+    "@types/three": "^0.129.1",
     "cpy-cli": "^3.1.1",
-    "esbuild": "^0.8.55",
+    "del-cli": "^3.0.1",
     "rollup": "^2.40.0",
     "rollup-plugin-dts": "^2.0.1",
     "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.1.0",
-    "typescript": "^4.2.3"
+    "rollup-plugin-typescript2": "^0.30.0",
+    "tslib": "^2.2.0",
+    "typescript": "^4.3.2"
   }
 }
