--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-ifc-three",
-  "version": "1.0.0",
-  "description": "This library is the implementation of [web-ifc](https://github.com/tomvandig/web-ifc) for [THREE.js](https://github.com/mrdoob/three.js/). This allows to parse and generate the geometry of IFC models in JavaScript, both in the browser and on a Node server.",
+  "version": "0.0.2",
+  "description": "This library is the implementation of [web-ifc](https://github.com/tomvandig/web-ifc) for [THREE.js](https://github.com/mrdoob/three.js/). This is the official IFCLoader of Three.js.",
   "main": "index.js",
   "scripts": {
     "setup-repo": "npm i -g rollup && npm i -g cpy-cli",
@@ -11,7 +11,8 @@
     "clean": " npm run format-result",
     "format-result": "esformatter --config config/esformatter.config.json dist/IFCLoader.js -i",
     "build-example": "rollup -c example/rollup.config.js && npm run copy-wasm",
-    "copy-wasm": "cpy node_modules/web-ifc/web-ifc.wasm example"
+    "copy-wasm": "cpy node_modules/web-ifc/web-ifc.wasm example",
+    "publish": "cpy package.json dist && cd dist && npm publish"
   },
   "repository": {
     "type": "git",
