--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/three": "^0.129.1",
     "cpy-cli": "^3.1.1",
     "del-cli": "^3.0.1",
+    "esformatter": "^0.11.3",
     "rollup": "^2.40.0",
     "rollup-plugin-dts": "^2.0.1",
     "rollup-plugin-terser": "^7.0.2",
