--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-ifc-three",
-  "version": "0.0.34",
+  "version": "0.0.35",
   "description": "This library is the implementation of [web-ifc](https://github.com/tomvandig/web-ifc) for [THREE.js](https://github.com/mrdoob/three.js/). This is the official IFCLoader of Three.js.",
   "main": "index.js",
   "scripts": {
@@ -58,6 +58,7 @@
     "rollup-plugin-dts": "^2.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
+    "serve": "^12.0.0",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "tslib": "^2.2.0",
