--- a/web-ifc-three/config/tsconfig.declaration.json
+++ b/web-ifc-three/config/tsconfig.declaration.json
@@ -5,5 +5,7 @@
       "declaration": true,
       "removeComments": false
     },
-    "exclude" : ["../src/**/*.test.ts"]
+    "exclude" : [
+      "../web-ifc-three/src/**/*.test.ts"
+    ]
   }
