--- a/web-ifc-three/package.json
+++ b/web-ifc-three/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "build": "rollup -c config/rollup.config.js && npm run build-declaration && npm run clean",
     "build-declaration": "tsc -p config/tsconfig.declaration.json",
+    "build-worker": "rollup -c config/rollup-worker.config.js",
     "clean": "esformatter --config config/esformatter.config.json dist/IFCLoader.js -i",
     "build-example": "rollup -c ../example/rollup.config.js && npm run copy-wasm",
     "copy-wasm": "cpy node_modules/web-ifc/web-ifc.wasm example",
