--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "example",
-  "version": "0.0.69",
+  "version": "0.0.70",
   "author": "IFC.js",
   "license": "Mozilla Public License Version 2.0",
   "description": "This library is the implementation of [web-ifc](https://github.com/tomvandig/web-ifc) for [THREE.js](https://github.com/mrdoob/three.js/). This is the official IFCLoader of Three.js.",
@@ -23,8 +23,9 @@
   },
   "homepage": "https://github.com/agviegas/web-ifc-three#readme",
   "scripts": {
-    "build": "rollup -c && npm run copy-wasm",
-    "copy-wasm": "cpy ../node_modules/web-ifc/web-ifc.wasm ."
+    "build": "rollup -c && npm run copy-files",
+    "watch": "rollup -c -w",
+    "copy-files": "cpy ../node_modules/web-ifc/web-ifc.wasm . && cpy ../web-ifc-three/dist/IFCWorker.js . && cpy ../web-ifc-three/dist/IFCWorker.js.map ."
   },
   "dependencies": {
     "stats.js": "^0.17.0",
