--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-ifc-three",
   "version": "0.0.103",
   "description": "This library is the implementation of [web-ifc](https://github.com/tomvandig/web-ifc) for [THREE.js](https://github.com/mrdoob/three.js/). This is the official IFCLoader of Three.js.",
-  "main": "index.js",
+  "main": "web-ifc-three/src/IFCLoader.ts",
   "private": true,
   "scripts": {
     "setup-repo": "npm i -g rollup && npm i -g cpy-cli",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/agviegas/web-ifc-three.git"
+    "url": "git+https://github.com/IFCjs/web-ifc-three"
   },
   "keywords": [
     "bim",
@@ -24,11 +24,11 @@
     "aec"
   ],
   "author": "",
-  "license": "Mozilla Public License Version 2.0",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/agviegas/web-ifc-three/issues"
+    "url": "https://github.com/IFCjs/web-ifc-three/issues"
   },
-  "homepage": "https://github.com/agviegas/web-ifc-three#readme",
+  "homepage": "https://ifcjs.github.io/info/docs/Guide/web-ifc-three/Introduction",
   "workspaces": [
     "web-ifc-three",
     "example"
