--- a/web-ifc-three/package.json
+++ b/web-ifc-three/package.json
@@ -2,12 +2,12 @@
   "name": "web-ifc-three",
   "version": "0.0.103",
   "author": "IFC.js",
-  "license": "Mozilla Public License Version 2.0",
+  "license": "MIT",
   "description": "This library is the implementation of [web-ifc](https://github.com/tomvandig/web-ifc) for [THREE.js](https://github.com/mrdoob/three.js/). This is the official IFCLoader of Three.js.",
-  "main": "index.js",
+  "main": "src/IFCLoader.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/agviegas/web-ifc-three.git"
+    "url": "git+https://github.com/IFCjs/web-ifc-three"
   },
   "keywords": [
     "bim",
