add utilities function to IFCManager, and Sequence Data Class (#91)
* add utilities function to IFCManager, and Sequence Data Class

* add IFC2JSGANTT utilities for displaying gantt data

* Delete index.html

error in commit

* fixed

* attempt to merge again

* changes staged

* fix last commit on IfcManager.ts comments

--- a/web-ifc-three/package.json
+++ b/web-ifc-three/package.json
@@ -28,11 +28,12 @@
     "build-worker": "rollup -c config/rollup-worker.config.js",
     "clean": "esformatter --config config/esformatter.config.json dist/IFCLoader.js -i",
     "build-example": "rollup -c ../example/rollup.config.js && npm run copy-wasm",
-    "publish-repo": "npm run build && cpy package.json dist && cd dist && npm publish",
+    "publish-repo": "npm run build && copy package.json dist && cd dist && npm publish",
     "watch": "rollup -c config/rollup.config.js -w",
     "test": "jest"
   },
   "dependencies": {
+    "three": "^0.135.0",
     "three-mesh-bvh": "^0.5.2",
     "web-ifc": "^0.0.33"
   },
