--- a/package.json
+++ b/package.json
@@ -32,5 +32,11 @@
   "workspaces": [
     "web-ifc-three",
     "example"
-  ]
+  ],
+  "dependencies": {
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "cpy": "^9.0.1",
+    "esformatter": "^0.11.3",
+    "rollup": "^2.70.0"
+  }
 }
