--- a/web-ifc-three/package.json
+++ b/web-ifc-three/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-ifc-three",
-  "version": "0.0.117",
+  "version": "0.0.118",
   "author": "IFC.js",
   "license": "MIT",
   "description": "This library is the implementation of [web-ifc](https://github.com/tomvandig/web-ifc) for [THREE.js](https://github.com/mrdoob/three.js/). This is the official IFCLoader of Three.js.",
@@ -33,7 +33,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "three": "^0.135.0",
     "three-mesh-bvh": "^0.5.11",
     "web-ifc": "^0.0.35"
   },
@@ -62,6 +61,6 @@
     "typescript": "^4.3.2"
   },
   "peerDependencies": {
-    "three": "^0.135.0"
+    "three": "0.135"
   }
 }
