--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "example",
-  "version": "0.0.118",
+  "version": "0.0.119",
   "author": "IFC.js",
   "license": "MIT",
   "description": "This library is the implementation of [web-ifc](https://github.com/tomvandig/web-ifc) for [THREE.js](https://github.com/mrdoob/three.js/). This is the official IFCLoader of Three.js.",
@@ -28,12 +28,14 @@
     "copy-files": "cpy ../node_modules/web-ifc/web-ifc.wasm . && cpy ../node_modules/web-ifc/web-ifc-mt.wasm . && cpy ../web-ifc-three/dist/IFCWorker.js . && cpy ../web-ifc-three/dist/IFCWorker.js.map ."
   },
   "dependencies": {
+    "client-zip": "^2.2.2",
     "stats.js": "^0.17.0",
     "three": "^0.135.0",
     "web-ifc": "^0.0.35",
-    "web-ifc-three": "0.0.118"
+    "web-ifc-three": "0.0.119"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.2",
     "cpy-cli": "^3.1.1"
   }
 }
