--- a/web-ifc-three/package.json
+++ b/web-ifc-three/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-ifc-three",
-  "version": "0.0.118",
+  "version": "0.0.119",
   "author": "IFC.js",
   "license": "MIT",
   "description": "This library is the implementation of [web-ifc](https://github.com/tomvandig/web-ifc) for [THREE.js](https://github.com/mrdoob/three.js/). This is the official IFCLoader of Three.js.",
@@ -33,6 +33,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "bim-fragment": "^0.0.10",
     "three-mesh-bvh": "^0.5.11",
     "web-ifc": "^0.0.35"
   },
@@ -41,6 +43,7 @@
     "@babel/preset-env": "^7.13.9",
     "@babel/preset-typescript": "^7.14.5",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/jest": "^26.0.23",
