--- a/example/package.json
+++ b/example/package.json
@@ -30,9 +30,9 @@
   "dependencies": {
     "client-zip": "^2.2.2",
     "stats.js": "^0.17.0",
-    "three": "^0.135.0",
+    "three": "0.149",
     "web-ifc": "^0.0.36",
-    "web-ifc-three": "0.0.121"
+    "web-ifc-three": "0.0.122"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.2",
