--- a/web-ifc-three/package.json
+++ b/web-ifc-three/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-ifc-three",
-  "version": "0.0.121",
+  "version": "0.0.122",
   "author": "IFC.js",
   "license": "MIT",
   "description": "This library is the implementation of [web-ifc](https://github.com/tomvandig/web-ifc) for [THREE.js](https://github.com/mrdoob/three.js/). This is the official IFCLoader of Three.js.",
@@ -34,8 +34,7 @@
   },
   "dependencies": {
     "@rollup/plugin-node-resolve": "^13.3.0",
-    "bim-fragment": "^0.0.11",
-    "three-mesh-bvh": "^0.5.11",
+    "three-mesh-bvh": "0.5.21",
     "web-ifc": "^0.0.36"
   },
   "devDependencies": {
@@ -47,7 +46,7 @@
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/jest": "^26.0.23",
-    "@types/three": "^0.134.0",
+    "@types/three": "0.149",
     "babel-jest": "^27.0.6",
     "cpy-cli": "^3.1.1",
     "del-cli": "^3.0.1",
@@ -64,6 +63,6 @@
     "typescript": "^4.3.2"
   },
   "peerDependencies": {
-    "three": "0.135"
+    "three": "^0.149.0"
   }
 }
